bug in route users-list-all
